feat: java 24 support